[tool.poetry]
name = "pylox"
version = "0.1.0"
description = "An interpreter for the Lox programming language written in Python."
authors = ["Bolun Thompson <abolunthompson@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
