[tool.poetry]
name = "pylox"
version = "0.1.0"
description = "An interpreter for the Lox programming language written in Python."
authors = ["Bolun Thompson <abolunthompson at gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BolunThompson/PyLox"
repository = "https://github.com/BolunThompson/PyLox"
keywords = ["pylox", "lox"]

[tool.poetry.dependencies]
python = "^3.7"
more-itertools = "^8.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
pytest = "^5.4.2"
pylint = "^2.5.2"
rope = {version = "^0.17.0", optional = true}

[tool.poetry.extras]
caching = ["rope"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

